# pixie

./: .gitignore  AUTHORS  CMakeLists.txt  COMPILING.txt  DEVNOTES  Doxyfile  LICENSE  Makefile.am  Makefile.in  README  README.md  acinclude.m4  aclocal.m4  config-cmake.h.in  config.guess  config.h  config.h.in  config.sub  config.windows.h  config.xcode.h  configure  configure.in  depcomp  install-sh  lines_tounix.sh  ltmain.sh  makeclean.bat  makeinst.bat  makeunix  missing  native-endings.sh  pixie.spec
CMake/: FindOpenEXR.cmake  PixieUseBison.cmake  PixieUseFlex.cmake
Pixie/: ChangeLog  DEVNOTES  Makefile.am  acinclude.m4  config.h.in  makeinst.bat
Pixie/Pixie/: AUTHORS  config.h  configure.in  makeclean.bat  pixie.spec
Pixie/doc/: Makefile.in  Tutorials.html
Pixie/man/: rndr.1  sdrc.1  texmake.1
Pixie/shaders/: ambientindirect.sl  ambientlight.sdr  ambientocclusion.sdr  arealight.sdr  arealight.sl  constant.sdr  distantlight.sdr  distantlight.sl  matte.sdr  metal.sdr  metal.sl  mtorPhong.sdr  mtorPhong.sl  normdir.sdr  plastic.sdr  rayarea.sdr  rayarea.sl  raydistant.sdr  raypoint.sl  shadowarea.sdr  shadowarea.sl  shadowdistant.sl  shadowpoint.sdr
Pixie/win32inst/: PixieW32Setup.iss
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: Category_Documentation.html  Category_Tutorials.html  Documentation.html  Examples.html  FAQ.html  Makefile  Makefile.am  Makefile.in  NotIncludedStatic.html  NotSupportedStatic.html  Previous_Releases.html  Thumbs.db  Tutorials.html  index.html
doc/Documentation/: Attributes.html  Baking_3D_Textures.html  Conditional_RIB.html  DSO_shading.html  Display_drivers.html  Global_illumination.html  Hardcoded_shaders.html  Hiders.html  Installing_And_Running.html  Multithreading.html  Network_parallel_rendering.html  Occlusion_culling.html  Options.html  Performance_And_Quality_Tips.html  Point_based_GI.html  Ptc_API.html  RIB_Resources.html  Raytraced_shadows_and_reflections.html  Raytracing_from_C.html  Raytracing_in_SL.html  SL_Functions.html  Shader_library.html  Source_at_a_Glance.html  Source_at_a_first_glance.html  Transparency_shadow_maps.html  User_Attributes_And_Options.html  Version_management.html
doc/FAQ/: Installing_On_OSX.html  Whats_Wrong_With_My_Render.html  Why_Wont_Pixie_Run.html
doc/Tutorials/: BakeToTexture.html  Basics_Running_Pixie.html  Dispersion.html  Global_Illumination.html  Raytraced_shadows.html  Soft_raytraced_shadows.html
doc/css/: IE50Fixes.css  IE55Fixes.css  IE60Fixes.css  IE70Fixes.css  IEFixes.js  KHTMLFixes.css  MediaWiki_Common.css  (+9 more)
man/: rndr.1  sdrinfo.1  texmake.1
osxinst/: osxinstaller.pmproj
shaders/: ambientindirect.sdr  ambientindirect.sl  ambientlight.sdr  ambientlight.sl  ambientocclusion.sdr  ambientocclusion.sl  arealight.sdr  arealight.sl  constant.sdr  constant.sl  distantlight.sdr  distantlight.sl  fog.sdr  fog.sl  glass.sdr  glass.sl  matte.sdr  matte.sl  metal.sdr  metal.sl  mirror.sdr  mirror.sl  mtorDirectionalLight.sdr  mtorDirectionalLight.sl  mtorLambert.sdr  mtorLambert.sl  mtorPhong.sdr  mtorPhong.sl  normdir.sdr  normdir.sl  paintedmatte.sdr  paintedmatte.sl  paintedplastic.sdr  paintedplastic.sl  plastic.sdr  plastic.sl  pointlight.sdr  pointlight.sl  rayarea.sdr  rayarea.sl  (+14 more)
src/: CMakeLists.txt  Makefile.am  Makefile.in
src/common/: CMakeLists.txt  Makefile.am  Makefile.in  algebra.cpp  algebra.h  align.h  comments.h  containers.h  global.h  mathSpec.cpp  mathSpec.h  memoryman.cpp  memoryman.h  os.cpp  os.h  polynomial.h  simd.h
src/dsotest/: dsotest.cpp
src/file/: CMakeLists.txt  Makefile.am  Makefile.in  file.cpp  file.h  file_png.cpp  file_png.h  file_tiff.cpp  file_tiff.h
src/framebuffer/: CMakeLists.txt  Makefile.am  Makefile.in  colorswatch.cpp  colorswatch.h  eyedropper.cur  fbw.cpp  fbw.h  fbx.cpp  fbx.h  framebuffer.cpp  framebuffer.h  framebuffer.rc  panCursor.cur  resource.h
src/gui/: Makefile.am  Makefile.in  interface.h  opengl-fltk.h  opengl-qt.h  opengl.cpp  opengl.h  opengl.pro  statView.cpp  statView.h
src/openexr/: CMakeLists.txt  Makefile.am  Makefile.in  openexr.cpp
src/opengl/: Makefile.am  Makefile.in  opengl-fltk.cpp  opengl.cpp  opengl.h  opengl.pro  opengl.vcproj  winOpenGL.cpp  winOpenGL.h
src/precomp/: CMakeLists.txt  Makefile.am  Makefile.in  precomp.cpp
src/rgbe/: CMakeLists.txt  Makefile.am  Makefile.in  file.cpp  rgbe.cpp  rgbe.h
src/ri/: CMakeLists.txt  Makefile.am  Makefile.in  atomic.h  attributes.cpp  attributes.h  brickmap.cpp  brickmap.h  bsplinePatchgrid.cpp  bsplinePatchgrid.h  bundles.cpp  bundles.h  cache.cpp  cache.h  config.h  curves.cpp  curves.h  dataBlock.cpp  dataBlock.h  debug.cpp  debug.h  defaults.h  delayed.cpp  delayed.h  depository.cpp  depository.h  displayChannel.cpp  displayChannel.h  dlo.h  dlobject.cpp  dlobject.h  dso.cpp  dso.h  dso.l  dso.y  dsp.cpp  dsply.h  error.cpp  error.h  execute.cpp  (+173 more)
src/ri/windows/: resource.h  ri.rc
src/rndr/: CMakeLists.txt  Makefile.am  Makefile.in  rndr.cpp
src/sdr/: CMakeLists.txt  Makefile.am  Makefile.in  lex.sdr.cpp  sdr.cpp  sdr.h  sdr.l  sdr.y
src/sdrc/: CMakeLists.txt  Makefile.am  Makefile.in  dso.cpp  expression.cpp  expression.h  lex.dso.cpp  lex.sdrc.cpp  lex.sl.cpp  opcodes.cpp  opcodes.h  pp.h  pp1.c  pp2.c  pp3.c  pp4.c  pp5.c  pp6.c  pp7.c  pp8.c  ppext.h  sdr.cpp  sdr.h  sdrc.cpp  sl.cpp  sl.l  sl.tab.c  sl.y
src/sdrc2/: opcode.cpp  opcode.h  pp1.c  pp2.c  pp4.c  pp8.c  ppext.h  sdrc.cpp  sl.l  sl.y
src/sdrinfo/: CMakeLists.txt  Makefile.am  Makefile.in  sdrinfo.cpp
src/show/: CMakeLists.txt  Makefile.am  Makefile.in  brickmapView.cpp  brickmapView.h  cacheView.cpp  cacheView.h  imageView.cpp  imageView.h  interface.cpp  interface.h  meshView.cpp  meshView.h  photonView.cpp  photonView.h  pointCloudView.cpp  pointCloudView.h  radView.cpp  radView.h  show.cpp
src/slc/: Makefile.am  interpreter.h  lex.sl.cpp  nodes.h  sdr.cpp  sdr.h  sl.cpp  sl.l  sl.y
src/texmake/: CMakeLists.txt  Makefile.am  Makefile.in  texmake.cpp
textures/: checkers.tif  logo.tif
win32inst/: PixieW32Setup.iss  Thumbs.db
(+242 files in other folders)
