include_directories(.)

add_subdirectory(common)
add_subdirectory(file)
add_subdirectory(framebuffer)
add_subdirectory(openexr)
add_subdirectory(precomp)
add_subdirectory(rgbe)
add_subdirectory(ri)
add_subdirectory(rndr)
add_subdirectory(sdr)
add_subdirectory(sdrc)
add_subdirectory(sdrinfo)
add_subdirectory(show)
add_subdirectory(texmake)
