lib_LTLIBRARIES = libcommon.la
  
LIBCOMMON_CURRENT_VERSION=0
LIBCOMMON_REVISION_VERSION=0
LIBCOMMON_AGE_VERSION=0
  
libcommon_la_LDFLAGS = -export-dynamic -version-info $(LIBCOMMON_CURRENT_VERSION):$(LIBCOMMON_REVISION_VERSION):$(LIBCOMMON_AGE_VERSION)
  
libcommon_la_SOURCES = algebra.cpp os.cpp memoryman.cpp

